added external ListView Supoort to Richeditor view & java 8 update